[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemies/Enemy02.gd" type="Script" id=1]
[ext_resource path="res://Art/Mine/rotate1/0001.png" type="Texture" id=2]
[ext_resource path="res://Art/Mine/rotate1/0011.png" type="Texture" id=3]
[ext_resource path="res://Art/Mine/rotate1/0021.png" type="Texture" id=4]
[ext_resource path="res://Art/Mine/rotate1/0031.png" type="Texture" id=5]
[ext_resource path="res://Art/Mine/rotate1/0041.png" type="Texture" id=6]
[ext_resource path="res://Art/Mine/rotate1/0051.png" type="Texture" id=7]
[ext_resource path="res://Art/Mine/rotate1/0061.png" type="Texture" id=8]
[ext_resource path="res://Art/Mine/rotate1/0071.png" type="Texture" id=9]
[ext_resource path="res://Art/Mine/rotate1/0081.png" type="Texture" id=10]
[ext_resource path="res://Art/Mine/rotate1/0091.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 12.2289 )

[node name="Enemy02" type="Node2D" groups=[
"enemy",
]]
position = Vector2( 232.908, 177.196 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -6.39706, -0.0967712 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -7.17479, 0 )
shape = SubResource( 2 )

[node name="shoot_point" type="Node2D" parent="."]
position = Vector2( 7.52618, 0 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
